--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.4.1'
+version = '1.4.1-koepel'
 group = 'com.bagel.atmospheric' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'Atmospheric-1.15.2'
 
@@ -88,14 +88,20 @@ minecraft {
     }
 }
 
+repositories {
+    flatDir {
+        dirs "libs"
+    }
+}
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.1.79'
-	compile fg.deobf("curse.maven:abnormals-core:2980113")
-	compile fg.deobf("curse.maven:locatebiome:2922461")
-	compile fg.deobf("curse.maven:jei:2944279")
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.57'
+    implementation fg.deobf("com.teamabnormals.abnormals_core:abnormals-core:1.15.2-1.0.6")
+    implementation fg.deobf("bl4ckscor3.mod:locatebiome")
+    implementation fg.deobf("mezz.jei:jei-1.15.2-6.0.3.16")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
